# IpCodec

./: Cargo.toml
glade/: main_ui.glade  main_ui.glade.bak
pjproject/: Cargo.toml
pjproject/pj-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pj-sys/src/: lib.rs
pjproject/pjlib-util-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjlib-util-sys/src/: lib.rs
pjproject/pjmedia-audiodev-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjmedia-audiodev-sys/src/: lib.rs
pjproject/pjmedia-codec-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjmedia-codec-sys/src/: lib.rs
pjproject/pjmedia-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjmedia-sys/src/: lib.rs
pjproject/pjmedia-videodev-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjmedia-videodev-sys/src/: lib.rs
pjproject/pjnath-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjnath-sys/src/: lib.rs
pjproject/pjsip-simple-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjsip-simple-sys/src/: lib.rs
pjproject/pjsip-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjsip-sys/src/: lib.rs  module.rs
pjproject/pjsip-ua-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjsip-ua-sys/src/: lib.rs
pjproject/pjsua-sys/: Cargo.toml  build.rs  wrapper.h
pjproject/pjsua-sys/src/: lib.rs
pjproject/src/: lib.rs  pj.rs  pj_enum.rs  pjlib_util.rs  pjmedia.rs  pjmedia_codec.rs  pjnath.rs  pjsip.rs  pjsip_simple.rs  pjsip_ua.rs  pjsua.rs  prelude.rs  utils.rs
pjproject/src/pj/: atomic.rs  auto.rs  event.rs  grp.rs  ioqueue.rs  mutex.rs  pool.rs  rbtree.rs  semaphore.rs  socks.rs  ssl.rs  thread.rs  timer.rs
pjproject/src/pjlib_util/: auto.rs
pjproject/src/pjmedia/: audio.rs  auto.rs  codec.rs
pjproject/src/pjmedia_audiodev/: auto.rs
pjproject/src/pjmedia_codec/: auto.rs
pjproject/src/pjnath/: auto.rs
pjproject/src/pjsip/: auto.rs  core.rs  endpoint.rs  transport.rs
pjproject/src/pjsip_simple/: auto.rs
pjproject/src/pjsip_ua/: auto.rs
pjproject/src/pjsua/: account.rs  auto.rs  buddy.rs  call.rs  media.rs  transport.rs  ua.rs
src/: about.rs  account.rs  audio_line.rs  codec.rs  dialpad.rs  header.rs  helper.rs  main.rs  maintab.rs  settings.rs  settings_audio.rs  settings_dns.rs  settings_ice.rs  settings_media.rs  settings_proxy.rs  settings_stun.rs  settings_tls.rs  settings_turn.rs  settings_ua.rs  sipcore.rs  sipua.rs  status.rs
