[package]
name = "open_audio_ip_codec"
version = "0.1.0"
authors = ["tamara"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pjproject = { path = "./pjproject" }
configparser = "1.0.0"
systemstat = "0.1.7"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]

[dependencies.gdk]
version = ""
features = ["v3_16"]

[build-dependencies]
