[package]
name = "pjproject"
version = "0.1.0"
authors = ["dickytamara <dickytamara@hotmail.com>"]
edition = "2018"

[lib]
name = "pjproject"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
pj-sys = { path = "./pj-sys"}
pjlib-util-sys = { path = "./pjlib-util-sys" }
pjnath-sys = { path = "./pjnath-sys" }
pjmedia-sys = { path = "./pjmedia-sys" }
pjmedia-audiodev-sys = { path = "./pjmedia-audiodev-sys" }
pjmedia-videodev-sys = { path = "./pjmedia-videodev-sys" }
pjmedia-codec-sys = { path = "./pjmedia-codec-sys" }
pjsip-sys = { path = "./pjsip-sys" }
pjsip-ua-sys = { path = "./pjsip-ua-sys" }
pjsip-simple-sys = { path = "./pjsip-simple-sys" }
pjsua-sys = { path = "./pjsua-sys" }