[package]
name = "pjmedia-sys"
version = "0.1.0"
authors = ["tamara"]
edition = "2018"
# build = "build.rs"


[lib]
name = "pjmedia_sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pj-sys = { path = "../pj-sys" }
pjnath-sys = { path = "../pjnath-sys" }

[build-dependencies]
# bindgen = "0.58.1"
