[package]
name = "pjmedia-videodev-sys"
version = "0.1.0"
authors = ["dickytamara <dickytamara@hotmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "pjmedia_videodev_sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pj-sys = { path = "../pj-sys" }
pjmedia-sys = { path = "../pjmedia-sys" }

[build-dependencies]
# bindgen = "0.58.1"
