[package]
name = "pjsip-ua-sys"
version = "0.1.0"
authors = ["dickytamara <dickytamara@hotmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "pjsip_ua_sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pj-sys = { path = "../pj-sys" }
pjsip-sys = { path = "../pjsip-sys"}
pjsip-simple-sys = { path = "../pjsip-simple-sys" }
pjmedia-sys = { path = "../pjmedia-sys" }


[build-dependencies]
# bindgen = "0.58.1"