[package]
name = "pjsua-sys"
version = "0.1.0"
authors = ["tamara"]
edition = "2018"
build = "build.rs"

[lib]
name = "pjsua_sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pj-sys = { path = "../pj-sys" }
# pjlib-util-sys = { path = "../pjlib-util-sys" }
pjnath-sys = { path = "../pjnath-sys" }
pjmedia-sys = { path = "../pjmedia-sys" }
pjsip-sys = { path = "../pjsip-sys" }
pjsip-simple-sys = { path = "../pjsip-simple-sys" }
pjsip-ua-sys = { path = "../pjsip-ua-sys" }

[build-dependencies]
# bindgen = "0.58.1"
